Updated menu options

--- a/assets/data/menu/appetizer.json
+++ b/assets/data/menu/appetizer.json
@@ -117,5 +117,12 @@
         "addons": "",
         "cuisine": "Japanese",
         "instructions": ""
+    },
+    {
+        "name": "Corn Dog",
+        "ingredients": "",
+        "addons": "",
+        "cuisine": "Korean",
+        "instructions": ""
     }
 ]
