--- a/assets/data/menu/appetizer.json
+++ b/assets/data/menu/appetizer.json
@@ -84,21 +84,7 @@
         "instructions": ""
     },
     {
-        "name": "Fried Mantou",
-        "ingredients": "",
-        "addons": "Condensed Milk",
-        "cuisine": "Chinese",
-        "instructions": ""
-    },
-    {
-        "name": "Rice Rolls",
-        "ingredients": "",
-        "addons": "Soy Sauce",
-        "cuisine": "Chinese",
-        "instructions": ""
-    },
-    {
-        "name": "Youtiao",
+        "name": "Steamed Rice Noodles",
         "ingredients": "",
         "addons": "Soy Sauce",
         "cuisine": "Chinese",
