--- a/assets/data/menu/appetizer.json
+++ b/assets/data/menu/appetizer.json
@@ -14,20 +14,6 @@
         "instructions": ""
     },
     {
-        "name": "Onion Rings",
-        "ingredients": "Onions",
-        "addons": "",
-        "cuisine": "American",
-        "instructions": ""
-    },
-    {
-        "name": "Mozzarella Sticks",
-        "ingredients": "Cheese",
-        "addons": "",
-        "cuisine": "American",
-        "instructions": ""
-    },
-    {
         "name": "Chive Pancake",
         "ingredients": "",
         "addons": "",
@@ -36,6 +22,13 @@
     },
     {
         "name": "Scallion Pancake",
+        "ingredients": "",
+        "addons": "",
+        "cuisine": "Fuzhounese",
+        "instructions": ""
+    },
+    {
+        "name": "Sweet Potato Pancake",
         "ingredients": "",
         "addons": "",
         "cuisine": "Fuzhounese",
@@ -63,31 +56,31 @@
         "instructions": ""
     },
     {
-        "name": "Fried Dumplings",
+        "name": "Steamed Rice Noodles",
+        "ingredients": "",
+        "addons": "Soy Sauce",
+        "cuisine": "Chinese",
+        "instructions": ""
+    },
+    {
+        "name": "Pan Fried Dumplings",
         "ingredients": "",
         "addons": "Dumpling Sauce",
         "cuisine": "Chinese",
         "instructions": ""
     },
     {
-        "name": "Fried Scallops",
+        "name": "Pan Fried Scallops",
         "ingredients": "Scallops",
         "addons": "",
-        "cuisine": "Chinese",
+        "cuisine": "American",
         "instructions": ""
     },
     {
-        "name": "Fried Shrimp",
+        "name": "Pan Fried Shrimp",
         "ingredients": "Shrimp",
         "addons": "",
-        "cuisine": "Chinese",
-        "instructions": ""
-    },
-    {
-        "name": "Steamed Rice Noodles",
-        "ingredients": "",
-        "addons": "Soy Sauce",
-        "cuisine": "Chinese",
+        "cuisine": "American",
         "instructions": ""
     },
     {
@@ -102,13 +95,6 @@
         "ingredients": "",
         "addons": "",
         "cuisine": "Japanese",
-        "instructions": ""
-    },
-    {
-        "name": "Corn Dog",
-        "ingredients": "",
-        "addons": "",
-        "cuisine": "Korean",
         "instructions": ""
     }
 ]
