--- a/assets/data/menu/appetizer.json
+++ b/assets/data/menu/appetizer.json
@@ -84,6 +84,13 @@
         "instructions": ""
     },
     {
+        "name": "Bacon Wrapped Smokies",
+        "ingredients": "",
+        "addons": "",
+        "cuisine": "American",
+        "instructions": ""
+    },
+    {
         "name": "Kani Salad",
         "ingredients": "",
         "addons": "",
