Food card styling

--- a/assets/data/menu/appetizer.json
+++ b/assets/data/menu/appetizer.json
@@ -74,7 +74,7 @@
     {
         "name": "Kani Salad",
         "cuisine": "Japanese",
-        "ingredients": "Imitation Crab, Mayonnaise, Sriracha",
+        "ingredients": "Imitation Crab, Kewpie Mayonnaise, Sriracha",
         "instructions": "Shred imitation crab by rolling sticks between hands. Mix with mayonnaise and Sriracha in a 2:1 ratio"
     }
 ]
